--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: tunes
 description: "A new Flutter project."
-publish_to: 'none'
+publish_to: "none"
 version: 0.1.0
 
 environment:
@@ -10,6 +10,8 @@ dependencies:
   flutter:
     sdk: flutter
   firebase_core: ^3.6.0
+  flutter_svg: ^2.0.10+1
+  cached_network_image: ^3.4.1
 
 dev_dependencies:
   flutter_test:
@@ -18,3 +20,26 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/data/
+    - assets/fonts/
+    - assets/images/
+    - assets/images/svg/
+    - assets/images/png/
+    - assets/icons/
+    - assets/icons/svg/
+    - assets/icons/png/
+    - assets/localizations/
+  fonts:
+    - family: Comfortaa
+      fonts:
+        - asset: assets/fonts/comfortaa/Comfortaa-Light.ttf
+          weight: 300
+        - asset: assets/fonts/comfortaa/Comfortaa-Regular.ttf
+          weight: 400
+        - asset: assets/fonts/comfortaa/Comfortaa-Medium.ttf
+          weight: 500
+        - asset: assets/fonts/comfortaa/Comfortaa-SemiBold.ttf
+          weight: 600
+        - asset: assets/fonts/comfortaa/Comfortaa-Bold.ttf
+          weight: 700
