--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   firebase_core: ^3.6.0
   flutter_svg: ^2.0.10+1
   cached_network_image: ^3.4.1
+  flutter_slidable: ^3.1.1
 
 dev_dependencies:
   flutter_test:
@@ -21,15 +22,15 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   assets:
-    - assets/data/
+#    - assets/data/
     - assets/fonts/
     - assets/images/
-    - assets/images/svg/
-    - assets/images/png/
+#    - assets/images/svg/
+#    - assets/images/png/
     - assets/icons/
     - assets/icons/svg/
-    - assets/icons/png/
-    - assets/localizations/
+#    - assets/icons/png/
+#    - assets/localizations/
   fonts:
     - family: Comfortaa
       fonts:
